--- a/src/components/prod.css
+++ b/src/components/prod.css
@@ -71,13 +71,15 @@
   font-size: 20px;
   font-weight: bold;
   text-transform: uppercase;
-
+  margin-left: 15px;
 }
 .allprd_range{
   display:flex;
   flex-direction: column;
   min-width:5em;
   text-align: left;
+  margin-left: 15px;
+  
 }
 .allprd_rbtn{
   /*min-width:5em;*/
